--- a/o/oc/oce/oceanbreezegames.com.html
+++ b/o/oc/oce/oceanbreezegames.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oceanbreezegames.com privacy policy that was archived on 2013-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131207095905id_/http%3A//www.oceanbreezegames.com/index.php%3FPAGE%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oceanbreezegames.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214033757id_/http%3A//www.oceanbreezegames.com/index.php%3FPAGE%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
         <title>Download Games</title>		
@@ -14,7 +14,7 @@
 		<script language="javascript"><!--
 		var bFBEnabled = true;
 		var k2 = '';
-		var country = 'US';
+		var country = '';
 		var c2 = '';
 		var c1 = '';
 		var k1 = '';
@@ -103,7 +103,7 @@ function callPublish(msg, attachment, action_link)
 </div>
                                     <div id="main">
 									    <div class="history">
-										  Return To: <a href="http://wordstone.com/">Previous Page</a>										</div>
+										  Return To: <a href="">Previous Page</a>										</div>
                                         <style type="text/css">
     .title {
         font-size: 16px;
@@ -207,7 +207,7 @@ function callPublish(msg, attachment, action_link)
   </tbody></table>
 </center>
 										<div class="history">
-										  Return To: <a href="http://wordstone.com/">Previous Page</a>										</div>
+										  Return To: <a href="">Previous Page</a>										</div>
                                     </div>
 
                                     <div id="footer">    
@@ -235,7 +235,7 @@ function callPublish(msg, attachment, action_link)
 	   <a href="http://gamersgo.com" target="_blank" title="Gamers GO game portal - Submit your games">GamersGo.com</a> - <a href="http://www.zombietaxi2.com/" target="_blank">Zombie Taxi 2</a> - <a href="http://www.zombietaxi.com/" target="_blank">Zombie Taxi</a> - <a href="http://www.oceanbreezegames.com/index.php?PAGE=onlinegame&amp;g=Cube-Crash&amp;id=3" target="_blank">Cube Crash</a> - <a href="http://www.oceanbreezegames.com/" target="_blank">Download Games</a> - <a href="http://www.games-get-free.com" target="_blank">Games Get Free</a> - <a href="http://www.busybeearcade.com/" target="_blank">Free Online Games</a> - <a href="http://www.hidden-object-game.com" target="_blank">Hidden Object Games</a> - <a href="http://www.downloadgames2008.com" target="_blank">Free PC Games</a> - <a href="http://www.cargames1.com/" target="_blank">Car Games</a>
 	</div>
 	<div style="margin-top: 5px;"><a href="http://www.fasticon.com" target="_blank" rel="nofollow">Social Icons by: FastIcon.com</a>
-    <div style="margin-top: 5px;">© Copyright 2013 OceanBreezeGames.com</div>
+    <div style="margin-top: 5px;">© Copyright 2014 OceanBreezeGames.com</div>
 	<div>&nbsp;&nbsp; email: contact [at] oceanbreezegames [dot] com</div>
 	<div><a href="http://www.oceanbreezegames.com/index.php?PAGE=privacy" target="_blank" rel="nofollow">Privacy Policy</a>
 	
