--- a/s/sn/sna/snap.com.html
+++ b/s/sn/sna/snap.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the snap.com privacy policy that was archived on 2013-11-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131125221740id_/http%3A//www.idealab.com/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the snap.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214040658id_/http%3A//www.idealab.com/legal/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Idealab | Privacy Policy</title>
@@ -101,8 +101,11 @@
     <li id="inside3" class="subitem">
     <a href="/inside_the_lab/articles.html">Articles</a>
     </li>
-    <li id="inside4" class="subitem_last">
+    <li id="inside4" class="subitem">
     <a href="/inside_the_lab/events.html">Events</a>
+    </li>
+    <li id="inside5" class="subitem_last">
+    <a href="/inside_the_lab/ideaday.html">IdeaDay</a>
     </li>
   </ul>
   <img src="/images/header_footer2/vr.gif" width="1" height="29" alt="" id="insidedivider">
@@ -333,7 +336,7 @@
 		<td colspan="2" valign="top" align="left"><img src="/images/pixel.gif" width="1" height="11" alt=""></td>
 		</tr>
 		<tr>
-		<td width="650" valign="top" align="left"><div class="copyright"><div>© 2009-2013 Idealab. All rights reserved. All trademarks are the property of their respective owners. Idealab is not responsible for content published on Web sites accessible from this site or for content received from third parties. <a href="/legal/privacy.html">Privacy Policy</a> | <a href="/legal/terms.html">Terms of Service</a> | <a href="/site_map.html">Site Map</a></div></div></td>
+		<td width="650" valign="top" align="left"><div class="copyright"><div>© 2009-2014 Idealab. All rights reserved. All trademarks are the property of their respective owners. Idealab is not responsible for content published on Web sites accessible from this site or for content received from third parties. <a href="/legal/privacy.html">Privacy Policy</a> | <a href="/legal/terms.html">Terms of Service</a> | <a href="/site_map.html">Site Map</a></div></div></td>
 		<td width="349" rowspan="2" valign="top" align="right"><div style="padding-right: 40px;"><span class="footer_nav_hdr">Connect with us:</span><img src="/images/pixel.gif" width="10" height="1" alt=""><a href="http://www.facebook.com/idealab" target="_blank"><img src="/images/header_footer/icon_facebook4_on.gif" align="absmiddle" width="24" height="24" border="0" alt="Facebook"></a><img src="/images/pixel.gif" width="4" height="1" alt=""><a href="http://www.youtube.com/user/TheCoolNewStuff" target="_blank"><img src="/images/header_footer/icon_youtube4_on.gif" align="absmiddle" width="24" height="24" border="0" alt="Youtube"></a><img src="/images/pixel.gif" width="4" height="1" alt=""><a href="http://www.twitter.com/idealab" target="_blank"><img src="/images/header_footer/icon_twitter4_on.gif" align="absmiddle" width="24" height="24" border="0" alt="Twitter"></a><img src="/images/pixel.gif" width="5" height="1" alt=""><a href="https://plus.google.com/102583904710299355149?prsrc=3" style="text-decoration:none;" target="_blank"><img src="/images/header_footer/icon_google_plus.gif" width="24" height="24" align="absmiddle" alt="Google+" border="0"></a></div></td>
 		</tr>
 
