--- a/m/my/myp/mypartyplanner.com.html
+++ b/m/my/myp/mypartyplanner.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mypartyplanner.com privacy policy that was archived on 2013-05-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130510182829id_/http%3A//www.mypartyplanner.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mypartyplanner.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214044427id_/http%3A//www.mypartyplanner.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
     <title>My Party Planner - Privacy Policy</title>
@@ -56,8 +56,15 @@ window.setTimeout(function () { if (!xajaxLoaded) { alert('Error: the xajax Java
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 
+<div class="floatsignup_button" onclick="javascript: document.location='/signupsimple_start.html'; ">
+<img height="325" border="0" width="68" alt="Signup" src="/images/btn_vendor_signup.png" style="position: relative; left: 0px; display: inline; cursor: pointer;" id="signup_image">
+</div>
+
+
 
 <div id="overDiv" style="border-style: solid; border-color: black; border-width: 1px 3px 3px 1px; padding: 0px; position: absolute; visibility: hidden; z-index: 1000"></div>
+<div id="loading-mask" style="width: 100%; height: 100%; background: rgb(237, 235, 255); position: absolute; z-index: 20000; left: 0px; top: 0px; opacity: 0.2; display: none;">&nbsp;</div>
+<div id="loading" style="opacity: 0.8; display: none;"><div class="loading-indicator"><img src="/common/images/loading/bigrotation.gif" style="width:32px;height:32px;text-align:center;vertical-align:middle" alt="page is loading">&nbsp;&nbsp;&nbsp;Loading...</div></div>
 
 <script type="text/javascript">
 <!--
@@ -69,6 +76,7 @@ function main_init()
     setTimeout("YAHOO.util.Dom.setStyle(['loading-mask'], 'opacity', 0.2)",300);
     setTimeout("YAHOO.util.Dom.setStyle(['loading'], 'display', 'none');YAHOO.util.Dom.setStyle(['loading-mask'], 'display', 'none');",400);
 }
+YAHOO.util.Event.addListener(window, "load", main_init);
 //-->
 </script>
 
@@ -217,7 +225,7 @@ var as_json = new AutoSuggest('company_keyword', options);
 
         <script type="text/javascript">
 <!--
-var past_low_limit_date = new Date(2013, 4, 10, 0, 0, 0);
+var past_low_limit_date = new Date(2014, 1, 13, 0, 0, 0);
 var webiste_url = 'http://www.mypartyplanner.com';
 var categorySearchName =  new Array();
 var PerfectVendorForm = false;
@@ -297,6 +305,7 @@ categorySearchName[51] = "Valet";
 categorySearchName[3844] = "venues";
 categorySearchName[17] = "Videography";
 categorySearchName[4338] = "VIP_Services";
+categorySearchName[2741] = "Wait_Staff";
 categorySearchName[44] = "Locations_-or-_Venue";
 //-->
 </script>
@@ -685,23 +694,16 @@ Again, please review the Privacy Statement of any sites linked to MyPartyPlanner
     </div>
 
     <div style="text-align:center; padding: 5px 0px 5px 0px;">
-        <center><!--- begin oas cache-busting script --->
-<script language="JavaScript1.1">
-OAS_rn = '001234567890'; OAS_rns = '1234567890';
-OAS_rn = new String (Math.random()); OAS_rns = OAS_rn.substring (2, 11);
+        <center><script type="text/javascript"><!--
+google_ad_client = "ca-pub-0548288217006370";
+/* MPP TOP_970_90 */
+google_ad_slot = "9345044949";
+google_ad_width = 970;
+google_ad_height = 90;
+//-->
 </script>
-<!--- end oas cache-busting script --->
-
-<!--- start of mypartyplanner.sportsfanlive.com/default_standalone_x06_(728x90.1)  --->
-<script language="JavaScript1.1">
-document.write('<script LANGUAGE="JavaScript1.1" SRC="http://oascentral.sportsfanlive.com/RealMedia/ads/adstream_jx.ads/mypartyplanner.sportsfanlive.com/default/jx/solo/1'+OAS_rns+'@x06?XE&Partner=mypartyplanner&PartnerUnit=mypartyplanner.728x90.1.default/jx/solo&XE" type="text/javascript"><\/script>');
-</script><script language="JavaScript1.1" src="http://oascentral.sportsfanlive.com/RealMedia/ads/adstream_jx.ads/mypartyplanner.sportsfanlive.com/default/jx/solo/1997977875@x06?XE&amp;Partner=mypartyplanner&amp;PartnerUnit=mypartyplanner.728x90.1.default/jx/solo&amp;XE" type="text/javascript"></script>
-<noscript>
-<A HREF="http://oascentral.sportsfanlive.com/RealMedia/ads/click_nx.ads/mypartyplanner.sportsfanlive.com/default/nx/solo@x06?x?XE&Partner=mypartyplanner&PartnerUnit=mypartyplanner.728x90.1.default/nx/solo&XE" target="_blank">
-<img alt="party planner"  SRC="http://oascentral.sportsfanlive.com/RealMedia/ads/adstream_nx.ads/mypartyplanner.sportsfanlive.com/default/nx/solo@x06?x?XE&Partner=mypartyplanner&PartnerUnit=mypartyplanner.728x90.1.default/nx/solo&XE" border=0>
-</A>
-</noscript>
-<!--- end of mypartyplanner.sportsfanlive.com/default_standalone_x06_(728x90.1) --->    </center></div>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>    </center></div>
 
     <div class="copyright">@2008 <a href="http://www.mypartyplanner.com/">MyPartyPlanner.com</a> All Rights Reserved.</div>
 
