--- a/u/un/unt/untappd.com.html
+++ b/u/un/unt/untappd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the untappd.com privacy policy that was archived on 2013-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131206060515id_/https%3A//untappd.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the untappd.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214050732id_/https%3A//untappd.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 
@@ -14,7 +14,7 @@
 		
 	
 	<meta name="author" content="The Untappd Team">
-	<meta name="Copyright" content="Copyright Untappd 2013. All Rights Reserved.">
+	<meta name="Copyright" content="Copyright Untappd 2014. All Rights Reserved.">
 	<meta name="DC.title" content="Untappd">
 	<meta name="DC.subject" content="Untappd is a new mobile web app that allows you to socially share the brew you're currently enjoying, as well as where you're enjoying it, with your friends!">
 	<meta name="DC.creator" content="The Untappd Team">
@@ -32,16 +32,17 @@
 
 	<link href="/assets/v2/css/fonts.css" rel="stylesheet" type="text/css">
 
-			<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/master.css?v=1.3">
-		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/v3/css/style.css?v=1.3">
-				<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>-->
-		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-		<script>
-		if (typeof jQuery == 'undefined') {
-		    document.write(unescape("%3Cscript src='https://untappd.s3.amazonaws.com/site/assets/js/jquery.1.6.0.js' type='text/javascript'%3E%3C/script%3E"));
-		}
-		</script><script src="https://untappd.s3.amazonaws.com/site/assets/js/jquery.1.6.0.js" type="text/javascript"></script>
-		
+			<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/master.css?v=1.6">
+		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/v3/css/style.css?v=1.6">
+			<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script>
+	if (typeof jQuery == 'undefined') {
+	    document.write(unescape("%3Cscript src='https://untappd.s3.amazonaws.com/site/assets/v3/js/jquery.1.10.2.min.js' type='text/javascript'%3E%3C/script%3E"));
+	}
+	</script><script src="https://untappd.s3.amazonaws.com/site/assets/v3/js/jquery.1.10.2.min.js" type="text/javascript"></script>
+
+	<script src="https://untappd.s3.amazonaws.com/site/assets/v3/js/jquery-migrate-1.2.1.js"></script>
+	
 
 
 	<!--[if lte IE 7]><script src="https://untappd.s3.amazonaws.com/site/assets/js/ie6.js?4272033"></script><![endif]-->
@@ -55,11 +56,11 @@
 		<script src="https://untappd.s3.amazonaws.com/site/assets/js/jquery.tipsy.js"></script>
 		<script src="https://untappd.s3.amazonaws.com/site/assets/js/facybox.js"></script>
 		<script src="https://untappd.s3.amazonaws.com/site/assets/js/site.js"></script>
-		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/facybox.css?v=1.3">
+		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/facybox.css?v=1.6">
 
 		
-		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/jquery.notifyBar.css?v=1.3">
-		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/tipsy.css?v=1.3" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/jquery.notifyBar.css?v=1.6">
+		<link rel="stylesheet" href="https://untappd.s3.amazonaws.com/site/assets/css/tipsy.css?v=1.6" type="text/css" media="screen" title="no title" charset="utf-8">
 		<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
 		
 		<script type="text/javascript" language="Javascript">
@@ -98,7 +99,7 @@
 <div class="header out">
   <div class="nav">
     <div class="inner">
-      <h1><a class="track-click" data-track="desktop_header" data-href=":root" href="/">Untappd</a></h1>
+      <h1 class="logo"><a class="track-click" data-track="desktop_header" data-href=":root" href="/">Untappd</a></h1>
 
       <ul class="desktop_nav">
         <li><a class="track-click" data-track="desktop_menu" data-href=":thepub" href="/thepub">The Pub</a></li>
@@ -252,21 +253,21 @@
 
 	<div id="footer">
 
-		<p class="copyright">© 2013 Untappd LLC<br><br></p>
+		<p class="copyright">© 2014 Untappd LLC<br><br></p>
 
 		<ul>
-			<li><a href="/about">About Us</a></li>
-			<li><a href="/api">API</a></li>
-			<li><a href="http://untappd.com/business/breweries">Breweries</a></li>
-			<li><a href="http://untpd.it/store" target="_blank">Store</a></li>
-			<li><a href="http://help.untappd.com" target="_blank">Support</a></li>
-			<li><a href="http://blog.untappd.com" target="_blank">Blog</a></li>
-			<li><a href="http://twitter.com/untappd" target="_blank">Twitter</a></li>
-			<li><a href="http://facebook.com/untappd" target="_blank">Facebook</a></li>
-			<li><a href="http://meetup.com/untappd" target="_blank">Meetups</a></li>
-			<li><a href="/terms">Terms</a></li>
-			<li><a href="/privacy">Privacy</a></li>
-			<li><a href="mailto:info@untappd.com">Contact</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":footer" href="/about">About Us</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":api" href="/api">API</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":business" href="http://untappd.com/business/breweries">Breweries</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":store" href="http://untpd.it/store" target="_blank">Store</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":help" href="http://help.untappd.com" target="_blank">Support</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":blog" href="http://blog.untappd.com" target="_blank">Blog</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":twitter" href="http://twitter.com/untappd" target="_blank">Twitter</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":facebook" href="http://facebook.com/untappd" target="_blank">Facebook</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":meetup" href="http://meetup.com/untappd" target="_blank">Meetups</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":terms" href="/terms">Terms</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":privacy" href="/privacy">Privacy</a></li>
+			<li><a class="track-click" data-track="footer" data-href=":contact_email" href="mailto:info@untappd.com">Contact</a></li>
 		</ul>
 
 	</div>
