--- a/s/se/see/seeques.com.html
+++ b/s/se/see/seeques.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the seeques.com privacy policy that was archived on 2013-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131203073248id_/http%3A//www.seeques.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seeques.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214054104id_/http%3A//www.seeques.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -12,17 +12,17 @@
     <body>
     <header role="" class="navbar navbar-inverse">
     <div class="container">
-      <div class="navbar-header">     
-        <a title="SeeQues.com" class="navbar-brand" href="/">SeeQues.com</a>
-        <div id="searchform">
-            <form action="/search" method="get">
-                <input type="text" class="keyword" name="q">
-                <input type="submit" value="SEARCH" class="submit">
-            </form>
+        <div class="navbar-header">     
+            <a title="SeeQues.com" class="navbar-brand" href="/">SeeQues.com</a>
+            <div id="searchform">
+                <form action="/search" method="get">
+                    <input type="text" class="keyword" name="q">
+                    <input type="submit" value="SEARCH" class="submit">
+                </form>
+            </div>
         </div>
-      </div>
     </div>
-  </header>    <div class="container" id="main">
+</header>    <div class="container" id="main">
         <div class="row">
             <h3>Privacy Policy</h3>
             <p>At <a href="http://www.seeques.com/">seeques.com</a>, the privacy of our visitors is of extreme importance to us (See <a href="http://www.wp-insert.smartlogix.co.in/what-is-a-privacy-policy/" target="_blank" rel="nofollow">this article</a> to learn more about Privacy Policies.). This privacy policy document outlines the types of personal information is received and collected by <a href="http://www.seeques.com/">seeques.com</a> and how it is used.</p>
@@ -51,8 +51,57 @@
   </div>
 
 </div>
+
+<script type="text/javascript" defer="" async="" src="https://stat.appvui.biz/piwik.js"></script><script type="text/javascript" async="" src="http://c1.popads.net/pop.js"></script><script type="text/javascript" async="" src="http://c2.popads.net/pop.js"></script><script type="text/javascript">
+var infolinks_pid = 1931982;
+var infolinks_wsid = 7;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+
+<!-- PopAds.net Popunder Code for www.seeques.com -->
+<script type="text/javascript">
+  var _pop = _pop || [];
+  _pop.push(['siteId', 211178]);
+  _pop.push(['minBid', 0.001]);
+  _pop.push(['popundersPerIP', 0]);
+  _pop.push(['delayBetween', 0]);
+  _pop.push(['default', false]);
+  _pop.push(['defaultPerDay', 0]);
+  _pop.push(['topmostLayer', false]);
+  (function() {
+    var pa = document.createElement('script'); pa.type = 'text/javascript'; pa.async = true;
+    var s = document.getElementsByTagName('script')[0]; 
+    pa.src = 'http://c1.popads.net/pop.js';
+    pa.onerror = function() {
+      var sa = document.createElement('script'); sa.type = 'text/javascript'; sa.async = true;
+      sa.src = 'http://c2.popads.net/pop.js';
+      s.parentNode.insertBefore(sa, s);
+    };
+    s.parentNode.insertBefore(pa, s);
+  })();
+</script>
+<!-- PopAds.net Popunder Code End -->
+
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=9503622; 
+var sc_invisible=1; 
+var sc_security="999f27b2"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script><script type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="website
+statistics" href="http://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/9503622/0/999f27b2/1/"
+alt="website statistics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
 <!-- Piwik -->
-<script type="text/javascript" defer="" async="" src="https://stat.appvui.biz/piwik.js"></script><script type="text/javascript">
+<script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(["trackPageView"]);
   _paq.push(["enableLinkTracking"]);
