--- a/l/li/lib/libib.com.html
+++ b/l/li/lib/libib.com.html
@@ -1,35 +1,34 @@
-<!--The following is the downloaded HTML source of the libib.com privacy policy that was archived on 2013-07-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130716153145id_/http%3A//www.libib.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the libib.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214054211id_/http%3A//www.libib.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>Privacy policy - Libib.com</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta name="viewport" id="viewport">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
 <link href="/css/sub.css" rel="stylesheet" type="text/css">
+<link href="/css/chosen.css" rel="stylesheet" type="text/css">
 <link href="/css/library.css" rel="stylesheet" type="text/css">
 <link href="/css/mobile.css" rel="stylesheet" type="text/css">
 <link href="/css/jkal.css" rel="stylesheet" type="text/css">
-
-
-<link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
 
 <!--[if lt IE 9]>
 	<script src="/js/dist/html5shiv.js"></script>
 <![endif]-->
 
-
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="/js/jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="/js/jquery.placeholder.min.js" type="text/javascript"></script>
+<script src="/js/sendy.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 	$(document).ready(function() {
 	    $('input, textarea').placeholder();
+	    
+        if (navigator.userAgent.match(/iPad/i) || navigator.userAgent.match(/kindle/i) || navigator.userAgent.match(/silk/i)) {
+            
+        } else {
+            $('#viewport').attr('content', 'width=device-width, initial-scale=1.0, user-scalable=no');
+        }
 	});
 </script>
 
@@ -42,7 +41,7 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -76,16 +75,13 @@
 	<div class="bubble">
 		<img src="/images/icons/mail.png" alt="libib newsletter">
 	</div>
-	<!-- Begin MailChimp Signup Form -->
 	<div id="mc_embed_signup">
-		<form action="http://libib.us5.list-manage.com/subscribe/post?u=1d2a1b0f94aac27c5c417e847&amp;id=401de4175d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0px;">
-			<label for="mce-EMAIL" style="font-family: 'Open Sans', sans-serif;font-weight:300;font-size:20px;text-align:center;margin-bottom:20px;">Subscribe to our mailing list</label>
-			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" style="width:280px;" required="">
+			<h3 style="font-family: 'Open Sans', sans-serif;font-weight:300;font-size:20px;text-align:center;margin-bottom:20px;">Subscribe to our mailing list</h3>
+			<div id="mail-message"></div>
+			<input type="email" value="" name="email" class="email" id="mce-EMAIL" placeholder="email address" style="width:280px;" required="">
 			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-		</form>
 	</div>
-	<!--End mc_embed_signup-->
-	<p class="small">We respect your rights to privacy by using <a href="http://www.mailchimp.com">MailChimp</a>.</p>
+	<p class="small">We respect your rights to privacy.</p>
 </div></div><!-- /.left_container -->
 
 <div class="large_box">
@@ -109,14 +105,12 @@
 	<p>• To send periodic emails</p>
 	<blockquote>The email address you provide for order processing, may be used to send you information and updates pertaining to your order, in addition to receiving occasional company news, updates, related product or service information, etc.</blockquote>
 	<p>Note: If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email.</p>
+	
+	<p><strong>What analytics are used?</strong></p>
+    <p>The Google Analytics features you've implemented based on Display Advertising (e.g., Remarketing, Google Display Network Impression Reporting, the DoubleClick Campaign Manager integration, or Google Analytics Demographics and Interest Reporting).</p>
+    <p>Visitors can opt-out of Google Analytics for Display Advertising and customize Google Display Network ads using the <a href="https://www.google.com/settings/ads">Ads Settings</a>.</p>
 
 
-<!--
-	<p><strong>How do we protect your information?</strong></p>
-	<p>We implement a variety of security measures to maintain the safety of your personal information when you place an order or enter, submit, or access your personal information.</p>
-	<p>We offer the use of a secure server. All supplied sensitive/credit information is transmitted via Secure Socket Layer (SSL) technology and then encrypted into our Payment gateway providers database only to be accessible by those authorized with special access rights to such systems, and are required to?keep the information confidential.</p>
-	<p>After a transaction, your private information (credit cards, social security numbers, financials, etc.) will not be kept on file for more than 60 days.</p>
--->
 	<p><strong>Do we use cookies?</strong></p>
 	<p>Yes. Cookies are small files that a site or its service provider transfers to your computers hard drive through your Web browser (if you allow) that enables the sites or service providers systems to recognize your browser and capture and remember certain information</p>
 	<p>We use cookies to understand and save your preferences for future visits.</p>
@@ -137,7 +131,7 @@
 	<p>By using our site, you consent to our <a href="/privacy-policy">privacy policy</a>.</p>
 	<p><strong>Changes to our Privacy Policy</strong></p>
 	<p>If we decide to change our privacy policy, we will update the Privacy Policy modification date below.</p>
-	<p>This policy was last modified on 12-25-2012</p>
+	<p>This policy was last modified on 11-03-2013</p>
 	<p>http://www.libib.com/contact</p>
 </div>
 		
